fixed svg cutting off

--- a/apmap/src/pages/list-master/list-master.scss
+++ b/apmap/src/pages/list-master/list-master.scss
@@ -1,3 +1,7 @@
 page-list-master {
 
 }
+
+.ap-map {
+    padding: 44px;
+}
